--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public -p 9001",
     "build-storybook": "build-storybook"
   },
   "repository": {
@@ -25,7 +25,9 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
-    "babel-loader": "^8.2.3"
+    "@svgr/webpack": "^5.5.0",
+    "babel-loader": "^8.2.3",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
     "@metamask/jazzicon": "^2.0.0",
