master: added tokenInput component

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "@storybook/react": "^6.3.12",
     "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.3",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.27.0",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
