--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.27.0",
+    "storybook-addon-styled-component-theme": "^2.0.0",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
